--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@mdi/font": "^3.6.95",
     "core-js": "^3.3.2",
+    "firebase": "^7.5.2",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
